# SwinHackathon

API/: pyproject.toml  requirements.txt  server.py
API/app/: .env  app.py
API/app/users/: controller.py  service.py  sockets.py  utils.py
API/app/volunteer/: dto.py  model.py  service.py  volunteer.py
Model/: testDemo.py
OAuth2/: package-lock.json  package.json  server.js
Storage/: pyproject.toml  spark-kafka.py
Web/: README.md  package-lock.json  package.json
Web/src/: App.js  project.css
Web/src/component/: Image.js  WebcamCapture.js  WebcamSetup.js  cam-style.css
Web/src/components/: CameraButton.js  Finish.js  JumpingText.js  LoginButton.js  OtherCam.js  OtherCapture.js  Response.js  UserSwitch.js  WebcamCapture.js  cam-style.css  components.css
