[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["baothaihcmut <banbao22042004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-socketio = "^5.11.4"
websockets = "^13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
